cmake changes and include changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 #Initial setup
 cmake_minimum_required(VERSION 3.0.0)
-project(dyad VERSION 0.1.0)
+project(dyadlib VERSION 0.1.0)
 
 set(BUILD_DEBUG OFF) #Change to true when debugging
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
@@ -11,8 +11,8 @@ endif(CMAKE_BUILD_TYPE STREQUAL "Debug")
 option(BUILD_DYAD_STATIC "Build Dyad as a static library" OFF)
 
 #Setup target
-file(GLOB dyad_headers ${CMAKE_SOURCE_DIR}/src/*.h)
-file(GLOB dyad_sources ${CMAKE_SOURCE_DIR}/src/*.c)
+set(dyad_headers ${CMAKE_CURRENT_SOURCE_DIR}/src/dyad.h)
+set(dyad_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/dyad.c)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 if(BUILD_STATIC)
